Latest Fixes for quick batch and other scripts

--- a/sightline/test-output/old/Default suite/classes.html
+++ b/sightline/test-output/old/Default suite/classes.html
@@ -11,8 +11,8 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>QuickBatchModifyValidation</td>
-<td>regression smoke </td>
+<td>QuickBatchfromSearchTermDocAuditreport</td>
+<td>regression </td>
 </tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
