--- a/sightline/test-output/old/Default suite/reporter-output.html
+++ b/sightline/test-output/old/Default suite/reporter-output.html
@@ -1,2 +1,1 @@
-<h2>Reporter output</h2><table><tr><td><a href='C:\Users\smangal\git\Sightline_QA_Automation_POM\sightline/Screenshots/Assignment_Regression--QuickBatchModifyValidation.png'> <img src='C:\Users\smangal\git\Sightline_QA_Automation_POM\sightline/Screenshots/Assignment_Regression--QuickBatchModifyValidation.png' height='100' width='100'/> </a></td></tr>
-</table>
+<h2>Reporter output</h2><table></table>
