--- a/sightline/test-output/emailable-report.html
+++ b/sightline/test-output/emailable-report.html
@@ -9,10 +9,14 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="7">SQA Regression Suite</th></tr>
-<tr><td><a href="#t0">SiteLine</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">38,698</td><td>smoke</td><td></td></tr>
+<tr><td><a href="#t0">SiteLine</a></td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">44,810</td><td>smoke</td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">SQA Regression Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">SiteLine &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">testScriptsRegression.ProductionRegression</td><td><a href="#m0">test_Given_sightline_is_launched_and_login_as_pau_and_on_production_home_page_and_begin_new_production_process_When_expanding_the_tiff_production_component_Then_verify_the_tiff_product_component_displays_the_correct_default_options</a></td><td rowspan="1">1600724610707</td><td rowspan="1">38251</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">SQA Regression Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">SiteLine &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">testScriptsRegression.IngestionRegression</td><td><a href="#m0">test_Given_sightline_is_launched_and_login_as_pau_and_on_ingestion_home_page_and_new_ingestion_created_and_click_preview_run_button_and_click_run_ingest_button_and_click_copy_play_button_and_rename_MP3_doc_file_When_click_run_indexing_play_button_Then_verify_audio_indexing_fails</a></td><td rowspan="1">1600878133854</td><td rowspan="1">44565</td></tr></tbody>
 </table>
-<h2>SiteLine</h2><h3 id="m0">testScriptsRegression.ProductionRegression#test_Given_sightline_is_launched_and_login_as_pau_and_on_production_home_page_and_begin_new_production_process_When_expanding_the_tiff_production_component_Then_verify_the_tiff_product_component_displays_the_correct_default_options</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>SiteLine</h2><h3 id="m0">testScriptsRegression.IngestionRegression#test_Given_sightline_is_launched_and_login_as_pau_and_on_ingestion_home_page_and_new_ingestion_created_and_click_preview_run_button_and_click_run_ingest_button_and_click_copy_play_button_and_rename_MP3_doc_file_When_click_run_indexing_play_button_Then_verify_audio_indexing_fails</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">junit.framework.AssertionFailedError: Context &apos;click_copy_play_button&apos; not yet implemented
+	at junit.framework.Assert.fail(Assert.java:47)
+	at junit.framework.Assert.assertTrue(Assert.java:20)
+	at testScriptsRegression.IngestionRegression.test_Given_sightline_is_launched_and_login_as_pau_and_on_ingestion_home_page_and_new_ingestion_created_and_click_preview_run_button_and_click_run_ingest_button_and_click_copy_play_button_and_rename_MP3_doc_file_When_click_run_indexing_play_button_Then_verify_audio_indexing_fails(IngestionRegression.java:2999)
+... Removed 25 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
