Minor fixes in Smoke suite

--- a/sightline/test-output/old/Smoke Suite/classes.html
+++ b/sightline/test-output/old/Smoke Suite/classes.html
@@ -289,12 +289,12 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>metaDataSearch</td>
+<td>audioSearch</td>
 <td>regression smoke </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>audioSearch</td>
+<td>metaDataSearch</td>
 <td>regression smoke </td>
 </tr>
 <tr>
@@ -528,12 +528,12 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>saveSearchToDocView</td>
+<td>scheduleSavedSearch</td>
 <td>regression smoke </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>scheduleSavedSearch</td>
+<td>saveSearchToDocView</td>
 <td>regression smoke </td>
 </tr>
 <tr>
@@ -573,7 +573,52 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
+<td>DeleteFolderField</td>
+<td>regression smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>createRedaction</td>
+<td>regression smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>CreateCodingform</td>
+<td>regression smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
 <td>CreateSecurityGroup</td>
+<td>regression smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>createCommentField</td>
+<td>regression smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>DeleteTagField</td>
+<td>regression smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>CreateFolderField</td>
+<td>regression smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>createKeywordField</td>
+<td>regression smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>CreateAnnotationLayer</td>
+<td>regression smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>CreateTagField</td>
 <td>regression smoke </td>
 </tr>
 <tr>
