--- a/sightline/test-output/old/Smoke Suite/toc.html
+++ b/sightline/test-output/old/Smoke Suite/toc.html
@@ -10,7 +10,7 @@
 <tr valign='top'>
 <td>16 tests</td>
 <td><a target='mainFrame' href='classes.html'>15 classes</a></td>
-<td>41 methods:<br/>
+<td>50 methods:<br/>
 &nbsp;&nbsp;<a target='mainFrame' href='methods.html'>chronological</a><br/>
 &nbsp;&nbsp;<a target='mainFrame' href='methods-alphabetical.html'>alphabetical</a><br/>
 &nbsp;&nbsp;<a target='mainFrame' href='methods-not-run.html'>not run (1)</a></td>
@@ -22,7 +22,15 @@
 </tr></table>
 <table width='100%' class='test-failed'>
 <tr><td>
-<table style='width: 100%'><tr><td valign='top'>BasicAndAdvancedSearchOperations (3/3/0)</td><td valign='top' align='right'>
+<table style='width: 100%'><tr><td valign='top'>AllManageModules (8/2/0)</td><td valign='top' align='right'>
+  <a href='AllManageModules.html' target='mainFrame'>Results</a>
+</td></tr></table>
+</td></tr><p/>
+</table>
+
+<table width='100%' class='test-failed'>
+<tr><td>
+<table style='width: 100%'><tr><td valign='top'>BasicAndAdvancedSearchOperations (5/1/0)</td><td valign='top' align='right'>
   <a href='BasicAndAdvancedSearchOperations.html' target='mainFrame'>Results</a>
 </td></tr></table>
 </td></tr><p/>
@@ -30,40 +38,16 @@
 
 <table width='100%' class='test-failed'>
 <tr><td>
-<table style='width: 100%'><tr><td valign='top'>BatchUpload (2/1/0)</td><td valign='top' align='right'>
+<table style='width: 100%'><tr><td valign='top'>BatchPrint (0/1/0)</td><td valign='top' align='right'>
+  <a href='BatchPrint.html' target='mainFrame'>Results</a>
+</td></tr></table>
+</td></tr><p/>
+</table>
+
+<table width='100%' class='test-failed'>
+<tr><td>
+<table style='width: 100%'><tr><td valign='top'>BatchUpload (0/2/1)</td><td valign='top' align='right'>
   <a href='BatchUpload.html' target='mainFrame'>Results</a>
-</td></tr></table>
-</td></tr><p/>
-</table>
-
-<table width='100%' class='test-failed'>
-<tr><td>
-<table style='width: 100%'><tr><td valign='top'>BulkActionsFromSessionSearch (3/2/0)</td><td valign='top' align='right'>
-  <a href='BulkActionsFromSessionSearch.html' target='mainFrame'>Results</a>
-</td></tr></table>
-</td></tr><p/>
-</table>
-
-<table width='100%' class='test-failed'>
-<tr><td>
-<table style='width: 100%'><tr><td valign='top'>Categorization (0/1/0)</td><td valign='top' align='right'>
-  <a href='Categorization.html' target='mainFrame'>Results</a>
-</td></tr></table>
-</td></tr><p/>
-</table>
-
-<table width='100%' class='test-failed'>
-<tr><td>
-<table style='width: 100%'><tr><td valign='top'>DocView - Non Audio (1/2/0)</td><td valign='top' align='right'>
-  <a href='DocView - Non Audio.html' target='mainFrame'>Results</a>
-</td></tr></table>
-</td></tr><p/>
-</table>
-
-<table width='100%' class='test-failed'>
-<tr><td>
-<table style='width: 100%'><tr><td valign='top'>DocViewAudio (4/1/0)</td><td valign='top' align='right'>
-  <a href='DocViewAudio.html' target='mainFrame'>Results</a>
 </td></tr></table>
 </td></tr><p/>
 </table>
@@ -78,15 +62,7 @@
 
 <table width='100%' class='test-failed'>
 <tr><td>
-<table style='width: 100%'><tr><td valign='top'>Production (0/1/0)</td><td valign='top' align='right'>
-  <a href='Production.html' target='mainFrame'>Results</a>
-</td></tr></table>
-</td></tr><p/>
-</table>
-
-<table width='100%' class='test-failed'>
-<tr><td>
-<table style='width: 100%'><tr><td valign='top'>SavedSearchShareSchedule (1/3/0)</td><td valign='top' align='right'>
+<table style='width: 100%'><tr><td valign='top'>SavedSearchShareSchedule (3/1/0)</td><td valign='top' align='right'>
   <a href='SavedSearchShareSchedule.html' target='mainFrame'>Results</a>
 </td></tr></table>
 </td></tr><p/>
@@ -96,6 +72,46 @@
 <tr><td>
 <table style='width: 100%'><tr><td valign='top'>TS_017_DocList (1/2/0)</td><td valign='top' align='right'>
   <a href='TS_017_DocList.html' target='mainFrame'>Results</a>
+</td></tr></table>
+</td></tr><p/>
+</table>
+
+<table width='100%' class='test-failed'>
+<tr><td>
+<table style='width: 100%'><tr><td valign='top'>Workflow (0/1/0)</td><td valign='top' align='right'>
+  <a href='Workflow.html' target='mainFrame'>Results</a>
+</td></tr></table>
+</td></tr><p/>
+</table>
+
+<table width='100%' class='test-skipped'>
+<tr><td>
+<table style='width: 100%'><tr><td valign='top'>DocView - Non Audio (0/0/3)</td><td valign='top' align='right'>
+  <a href='DocView - Non Audio.html' target='mainFrame'>Results</a>
+</td></tr></table>
+</td></tr><p/>
+</table>
+
+<table width='100%' class='test-skipped'>
+<tr><td>
+<table style='width: 100%'><tr><td valign='top'>DocViewAudio (0/0/5)</td><td valign='top' align='right'>
+  <a href='DocViewAudio.html' target='mainFrame'>Results</a>
+</td></tr></table>
+</td></tr><p/>
+</table>
+
+<table width='100%' class='test-skipped'>
+<tr><td>
+<table style='width: 100%'><tr><td valign='top'>Production (0/0/1)</td><td valign='top' align='right'>
+  <a href='Production.html' target='mainFrame'>Results</a>
+</td></tr></table>
+</td></tr><p/>
+</table>
+
+<table width='100%' class='test-skipped'>
+<tr><td>
+<table style='width: 100%'><tr><td valign='top'>Reports (0/0/3)</td><td valign='top' align='right'>
+  <a href='Reports.html' target='mainFrame'>Results</a>
 </td></tr></table>
 </td></tr><p/>
 </table>
@@ -110,24 +126,16 @@
 
 <table width='100%' class='test-passed'>
 <tr><td>
-<table style='width: 100%'><tr><td valign='top'>AllManageModules (1/0/0)</td><td valign='top' align='right'>
-  <a href='AllManageModules.html' target='mainFrame'>Results</a>
+<table style='width: 100%'><tr><td valign='top'>BulkActionsFromSessionSearch (5/0/0)</td><td valign='top' align='right'>
+  <a href='BulkActionsFromSessionSearch.html' target='mainFrame'>Results</a>
 </td></tr></table>
 </td></tr><p/>
 </table>
 
 <table width='100%' class='test-passed'>
 <tr><td>
-<table style='width: 100%'><tr><td valign='top'>BatchPrint (1/0/0)</td><td valign='top' align='right'>
-  <a href='BatchPrint.html' target='mainFrame'>Results</a>
-</td></tr></table>
-</td></tr><p/>
-</table>
-
-<table width='100%' class='test-passed'>
-<tr><td>
-<table style='width: 100%'><tr><td valign='top'>Reports (3/0/0)</td><td valign='top' align='right'>
-  <a href='Reports.html' target='mainFrame'>Results</a>
+<table style='width: 100%'><tr><td valign='top'>Categorization (1/0/0)</td><td valign='top' align='right'>
+  <a href='Categorization.html' target='mainFrame'>Results</a>
 </td></tr></table>
 </td></tr><p/>
 </table>
@@ -136,14 +144,6 @@
 <tr><td>
 <table style='width: 100%'><tr><td valign='top'>ValidateAssignmentFunctionality (2/0/0)</td><td valign='top' align='right'>
   <a href='ValidateAssignmentFunctionality.html' target='mainFrame'>Results</a>
-</td></tr></table>
-</td></tr><p/>
-</table>
-
-<table width='100%' class='test-passed'>
-<tr><td>
-<table style='width: 100%'><tr><td valign='top'>Workflow (1/0/0)</td><td valign='top' align='right'>
-  <a href='Workflow.html' target='mainFrame'>Results</a>
 </td></tr></table>
 </td></tr><p/>
 </table>
