Production and categorization fixes

--- a/sightline/test-output/old/Default suite/classes.html
+++ b/sightline/test-output/old/Default suite/classes.html
@@ -4,14 +4,24 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>testScriptsSmoke.TS_004_BasicAndAdvancedSearchOperations</td>
+<td>testScriptsSmoke.TS_011_DocViewNonAudioReviewer</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>proximityAndRegExInBS</td>
+<td>addCommentandcompleteDoc</td>
+<td>regression smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>addredaction</td>
+<td>regression smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>addRemarkToFirstDoc</td>
 <td>regression smoke </td>
 </tr>
 <tr>
@@ -38,8 +48,4 @@
 <tr>
 <td align='center' colspan='3'>@AfterClass</td>
 </tr>
-<tr>
-<td>&nbsp;</td>
-<td>close</td>
-<td>&nbsp;</td></tr>
 </table>
