--- a/sightline/test-output/old/Default suite/methods-alphabetical.html
+++ b/sightline/test-output/old/Default suite/methods-alphabetical.html
@@ -1,44 +1,24 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="99699c">  <td>21/02/11 21:33:30</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TS_004_BasicAndAdvancedSearchOperations.beforeTestMethod(java.lang.reflect.Method)[pri:0, instance:testScriptsSmoke.TS_004_BasicAndAdvancedSearchOperations@dfd3711]">&gt;&gt;beforeTestMethod</td> 
-<td>&nbsp;</td>  <td>main@1167116739</td>   <td></td> </tr>
-<tr bgcolor="99699c">  <td>21/02/11 21:33:49</td>   <td>18751</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TS_004_BasicAndAdvancedSearchOperations.beforeTestMethod(java.lang.reflect.Method)[pri:0, instance:testScriptsSmoke.TS_004_BasicAndAdvancedSearchOperations@dfd3711]">&gt;&gt;beforeTestMethod</td> 
-<td>&nbsp;</td>  <td>main@1167116739</td>   <td></td> </tr>
-<tr bgcolor="99699c">  <td>21/02/11 21:34:12</td>   <td>42014</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TS_004_BasicAndAdvancedSearchOperations.beforeTestMethod(java.lang.reflect.Method)[pri:0, instance:testScriptsSmoke.TS_004_BasicAndAdvancedSearchOperations@dfd3711]">&gt;&gt;beforeTestMethod</td> 
-<td>&nbsp;</td>  <td>main@1167116739</td>   <td></td> </tr>
-<tr bgcolor="99699c">  <td>21/02/11 21:34:32</td>   <td>61662</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TS_004_BasicAndAdvancedSearchOperations.beforeTestMethod(java.lang.reflect.Method)[pri:0, instance:testScriptsSmoke.TS_004_BasicAndAdvancedSearchOperations@dfd3711]">&gt;&gt;beforeTestMethod</td> 
-<td>&nbsp;</td>  <td>main@1167116739</td>   <td></td> </tr>
-<tr bgcolor="99699c">  <td>21/02/11 21:34:53</td>   <td>83071</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TS_004_BasicAndAdvancedSearchOperations.beforeTestMethod(java.lang.reflect.Method)[pri:0, instance:testScriptsSmoke.TS_004_BasicAndAdvancedSearchOperations@dfd3711]">&gt;&gt;beforeTestMethod</td> 
-<td>&nbsp;</td>  <td>main@1167116739</td>   <td></td> </tr>
-<tr bgcolor="99699c">  <td>21/02/11 21:35:13</td>   <td>103467</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TS_004_BasicAndAdvancedSearchOperations.beforeTestMethod(java.lang.reflect.Method)[pri:0, instance:testScriptsSmoke.TS_004_BasicAndAdvancedSearchOperations@dfd3711]">&gt;&gt;beforeTestMethod</td> 
-<td>&nbsp;</td>  <td>main@1167116739</td>   <td></td> </tr>
-<tr bgcolor="99699c">  <td>21/02/11 21:35:34</td>   <td>123708</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TS_004_BasicAndAdvancedSearchOperations.close()[pri:0, instance:testScriptsSmoke.TS_004_BasicAndAdvancedSearchOperations@dfd3711]">&lt;&lt;close</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1167116739</td>   <td></td> </tr>
-<tr bgcolor="99699c">  <td>21/02/11 21:32:46</td>   <td>-43703</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TS_004_BasicAndAdvancedSearchOperations.preCondition()[pri:0, instance:testScriptsSmoke.TS_004_BasicAndAdvancedSearchOperations@dfd3711]">&gt;&gt;preCondition</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1167116739</td>   <td></td> </tr>
-<tr bgcolor="99699c">  <td>21/02/11 21:33:30</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TS_004_BasicAndAdvancedSearchOperations.proximityAndRegExInBS(java.lang.String)[pri:0, instance:testScriptsSmoke.TS_004_BasicAndAdvancedSearchOperations@dfd3711]">proximityAndRegExInBS</td> 
-  <td>main@1167116739</td>   <td></td> </tr>
-<tr bgcolor="99699c">  <td>21/02/11 21:33:49</td>   <td>18751</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TS_004_BasicAndAdvancedSearchOperations.proximityAndRegExInBS(java.lang.String)[pri:0, instance:testScriptsSmoke.TS_004_BasicAndAdvancedSearchOperations@dfd3711]">proximityAndRegExInBS</td> 
-  <td>main@1167116739</td>   <td></td> </tr>
-<tr bgcolor="99699c">  <td>21/02/11 21:34:12</td>   <td>42014</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TS_004_BasicAndAdvancedSearchOperations.proximityAndRegExInBS(java.lang.String)[pri:0, instance:testScriptsSmoke.TS_004_BasicAndAdvancedSearchOperations@dfd3711]">proximityAndRegExInBS</td> 
-  <td>main@1167116739</td>   <td></td> </tr>
-<tr bgcolor="99699c">  <td>21/02/11 21:34:32</td>   <td>61662</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TS_004_BasicAndAdvancedSearchOperations.proximityAndRegExInBS(java.lang.String)[pri:0, instance:testScriptsSmoke.TS_004_BasicAndAdvancedSearchOperations@dfd3711]">proximityAndRegExInBS</td> 
-  <td>main@1167116739</td>   <td></td> </tr>
-<tr bgcolor="99699c">  <td>21/02/11 21:34:53</td>   <td>83071</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TS_004_BasicAndAdvancedSearchOperations.proximityAndRegExInBS(java.lang.String)[pri:0, instance:testScriptsSmoke.TS_004_BasicAndAdvancedSearchOperations@dfd3711]">proximityAndRegExInBS</td> 
-  <td>main@1167116739</td>   <td></td> </tr>
-<tr bgcolor="99699c">  <td>21/02/11 21:35:13</td>   <td>103467</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TS_004_BasicAndAdvancedSearchOperations.proximityAndRegExInBS(java.lang.String)[pri:0, instance:testScriptsSmoke.TS_004_BasicAndAdvancedSearchOperations@dfd3711]">proximityAndRegExInBS</td> 
-  <td>main@1167116739</td>   <td></td> </tr>
-<tr bgcolor="99699c">  <td>21/02/11 21:33:49</td>   <td>18751</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TS_004_BasicAndAdvancedSearchOperations.takeScreenShot(org.testng.ITestResult)[pri:0, instance:testScriptsSmoke.TS_004_BasicAndAdvancedSearchOperations@dfd3711]">&lt;&lt;takeScreenShot</td> 
-<td>&nbsp;</td>  <td>main@1167116739</td>   <td></td> </tr>
-<tr bgcolor="99699c">  <td>21/02/11 21:34:12</td>   <td>42014</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TS_004_BasicAndAdvancedSearchOperations.takeScreenShot(org.testng.ITestResult)[pri:0, instance:testScriptsSmoke.TS_004_BasicAndAdvancedSearchOperations@dfd3711]">&lt;&lt;takeScreenShot</td> 
-<td>&nbsp;</td>  <td>main@1167116739</td>   <td></td> </tr>
-<tr bgcolor="99699c">  <td>21/02/11 21:34:32</td>   <td>61662</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TS_004_BasicAndAdvancedSearchOperations.takeScreenShot(org.testng.ITestResult)[pri:0, instance:testScriptsSmoke.TS_004_BasicAndAdvancedSearchOperations@dfd3711]">&lt;&lt;takeScreenShot</td> 
-<td>&nbsp;</td>  <td>main@1167116739</td>   <td></td> </tr>
-<tr bgcolor="99699c">  <td>21/02/11 21:34:53</td>   <td>83071</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TS_004_BasicAndAdvancedSearchOperations.takeScreenShot(org.testng.ITestResult)[pri:0, instance:testScriptsSmoke.TS_004_BasicAndAdvancedSearchOperations@dfd3711]">&lt;&lt;takeScreenShot</td> 
-<td>&nbsp;</td>  <td>main@1167116739</td>   <td></td> </tr>
-<tr bgcolor="99699c">  <td>21/02/11 21:35:13</td>   <td>103466</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TS_004_BasicAndAdvancedSearchOperations.takeScreenShot(org.testng.ITestResult)[pri:0, instance:testScriptsSmoke.TS_004_BasicAndAdvancedSearchOperations@dfd3711]">&lt;&lt;takeScreenShot</td> 
-<td>&nbsp;</td>  <td>main@1167116739</td>   <td></td> </tr>
-<tr bgcolor="99699c">  <td>21/02/11 21:35:34</td>   <td>123708</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TS_004_BasicAndAdvancedSearchOperations.takeScreenShot(org.testng.ITestResult)[pri:0, instance:testScriptsSmoke.TS_004_BasicAndAdvancedSearchOperations@dfd3711]">&lt;&lt;takeScreenShot</td> 
-<td>&nbsp;</td>  <td>main@1167116739</td>   <td></td> </tr>
+<tr bgcolor="be83e4">  <td>21/02/18 16:44:42</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TS_011_DocViewNonAudioReviewer.addCommentandcompleteDoc()[pri:0, instance:testScriptsSmoke.TS_011_DocViewNonAudioReviewer@31a5c39e]">addCommentandcompleteDoc</td> 
+  <td>main@1318822808</td>   <td></td> </tr>
+<tr bgcolor="be83e4">  <td>21/02/18 16:44:49</td>   <td>7771</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TS_011_DocViewNonAudioReviewer.addRemarkToFirstDoc()[pri:0, instance:testScriptsSmoke.TS_011_DocViewNonAudioReviewer@31a5c39e]">addRemarkToFirstDoc</td> 
+  <td>main@1318822808</td>   <td></td> </tr>
+<tr bgcolor="be83e4">  <td>21/02/18 16:45:36</td>   <td>53876</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TS_011_DocViewNonAudioReviewer.addredaction()[pri:0, instance:testScriptsSmoke.TS_011_DocViewNonAudioReviewer@31a5c39e]">addredaction</td> 
+  <td>main@1318822808</td>   <td></td> </tr>
+<tr bgcolor="be83e4">  <td>21/02/18 16:44:42</td>   <td>-1</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TS_011_DocViewNonAudioReviewer.beforeTestMethod(java.lang.reflect.Method)[pri:0, instance:testScriptsSmoke.TS_011_DocViewNonAudioReviewer@31a5c39e]">&gt;&gt;beforeTestMethod</td> 
+<td>&nbsp;</td>  <td>main@1318822808</td>   <td></td> </tr>
+<tr bgcolor="be83e4">  <td>21/02/18 16:44:49</td>   <td>7771</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TS_011_DocViewNonAudioReviewer.beforeTestMethod(java.lang.reflect.Method)[pri:0, instance:testScriptsSmoke.TS_011_DocViewNonAudioReviewer@31a5c39e]">&gt;&gt;beforeTestMethod</td> 
+<td>&nbsp;</td>  <td>main@1318822808</td>   <td></td> </tr>
+<tr bgcolor="be83e4">  <td>21/02/18 16:45:36</td>   <td>53875</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TS_011_DocViewNonAudioReviewer.beforeTestMethod(java.lang.reflect.Method)[pri:0, instance:testScriptsSmoke.TS_011_DocViewNonAudioReviewer@31a5c39e]">&gt;&gt;beforeTestMethod</td> 
+<td>&nbsp;</td>  <td>main@1318822808</td>   <td></td> </tr>
+<tr bgcolor="be83e4">  <td>21/02/18 16:41:26</td>   <td>-195494</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TS_011_DocViewNonAudioReviewer.preCondition()[pri:0, instance:testScriptsSmoke.TS_011_DocViewNonAudioReviewer@31a5c39e]">&gt;&gt;preCondition</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1318822808</td>   <td></td> </tr>
+<tr bgcolor="be83e4">  <td>21/02/18 16:44:49</td>   <td>7770</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TS_011_DocViewNonAudioReviewer.takeScreenShot(org.testng.ITestResult)[pri:0, instance:testScriptsSmoke.TS_011_DocViewNonAudioReviewer@31a5c39e]">&lt;&lt;takeScreenShot</td> 
+<td>&nbsp;</td>  <td>main@1318822808</td>   <td></td> </tr>
+<tr bgcolor="be83e4">  <td>21/02/18 16:45:35</td>   <td>53269</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TS_011_DocViewNonAudioReviewer.takeScreenShot(org.testng.ITestResult)[pri:0, instance:testScriptsSmoke.TS_011_DocViewNonAudioReviewer@31a5c39e]">&lt;&lt;takeScreenShot</td> 
+<td>&nbsp;</td>  <td>main@1318822808</td>   <td></td> </tr>
+<tr bgcolor="be83e4">  <td>21/02/18 16:46:06</td>   <td>84082</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TS_011_DocViewNonAudioReviewer.takeScreenShot(org.testng.ITestResult)[pri:0, instance:testScriptsSmoke.TS_011_DocViewNonAudioReviewer@31a5c39e]">&lt;&lt;takeScreenShot</td> 
+<td>&nbsp;</td>  <td>main@1318822808</td>   <td></td> </tr>
 </table>
