Added log for MTM TC IDs

--- a/sightline/test-output/old/Default suite/classes.html
+++ b/sightline/test-output/old/Default suite/classes.html
@@ -16,7 +16,27 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>proximityAndRegExInBS</td>
+<td>contentSearchWithOperatorsInAS</td>
+<td>regression smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>audioSearch</td>
+<td>regression smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>metaDataSearch</td>
+<td>regression smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>ConceptualSearch</td>
+<td>regression smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>searchsavedSearch</td>
 <td>regression smoke </td>
 </tr>
 <tr>
