--- a/sightline/test-output/emailable-report.html
+++ b/sightline/test-output/emailable-report.html
@@ -1,34 +1,38 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml"><head><title>TestNG Report</title><style type="text/css">table {margin-bottom:10px;border-collapse:collapse;empty-cells:show}th,td {border:1px solid #009;padding:.25em .5em}th {vertical-align:bottom}td {vertical-align:top}table a {font-weight:bold}.stripe td {background-color: #E6EBF9}.num {text-align:right}.passedodd td {background-color: #3F3}.passedeven td {background-color: #0A0}.skippedodd td {background-color: #DDD}.skippedeven td {background-color: #CCC}.failedodd td,.attn {background-color: #F33}.failedeven td,.stripe .attn {background-color: #D00}.stacktrace {white-space:pre;font-family:monospace}.totop {font-size:85%;text-align:center;border-bottom:2px solid #000}</style></head><body><table><tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr><tr><th colspan="7">RPMX V1.0 Test Suite - Sanity</th></tr><tr><th colspan="7">Smoke Suite</th></tr><tr><td><a href="#t0">Input</a></td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">31</td><td></td><td></td></tr><tr class="stripe"><td><a href="#t1">BasicAndAdvancedSearchOperations</a></td><td class="num">2</td><td class="num">0</td><td class="num attn">4</td><td class="num">4,244,308</td><td>smoke</td><td></td></tr><tr><th>Total</th><th class="num">2</th><th class="num">0</th><th class="num attn">4</th><th class="num">4,244,339</th><th colspan="2"></th></tr></table><table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">RPMX V1.0 Test Suite - Sanity</th></tr></tbody><tbody><tr><th colspan="4">Smoke Suite</th></tr></tbody><tbody id="t0"></tbody><tbody id="t1"><tr><th colspan="4">BasicAndAdvancedSearchOperations &#8212; failed</th></tr><tr class="failedeven"><td rowspan="4">testScriptsSmoke.TS_004_BasicAndAdvancedSearchOperations</td><td><a href="#m0">ConceptualSearch</a></td><td rowspan="1">1614664958327</td><td rowspan="1">25332</td></tr><tr class="failedeven"><td><a href="#m1">audioSearch</a></td><td rowspan="1">1614665508988</td><td rowspan="1">38584</td></tr><tr class="failedeven"><td><a href="#m2">contentSearchWithOperatorsInAS</a></td><td rowspan="1">1614665548326</td><td rowspan="1">141846</td></tr><tr class="failedeven"><td><a href="#m3">contentSearchWithOperatorsInBS</a></td><td rowspan="1">1614665690541</td><td rowspan="1">277650</td></tr><tr><th colspan="4">BasicAndAdvancedSearchOperations &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">testScriptsSmoke.TS_004_BasicAndAdvancedSearchOperations</td><td><a href="#m4">metaDataSearch</a></td><td rowspan="1">1614668597645</td><td rowspan="1">378513</td></tr><tr class="passedeven"><td><a href="#m5">searchsavedSearch</a></td><td rowspan="1">1614668976164</td><td rowspan="1">132879</td></tr></tbody></table><h2>Input</h2><h2>BasicAndAdvancedSearchOperations</h2><h3 id="m0">testScriptsSmoke.TS_004_BasicAndAdvancedSearchOperations#ConceptualSearch</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">org.openqa.selenium.ElementNotVisibleException: element not visible
-  (Session info: chrome=88.0.4324.150)
-  (Driver info: chromedriver=2.36.540470 (e522d04694c7ebea4ba8821272dbef4f9b818c91),platform=Windows NT 10.0.17763 x86_64) (WARNING: The server did not provide any stacktrace information)
-Command duration or timeout: 31 milliseconds
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+<meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
+<title>TestNG Report</title>
+<style type="text/css">table {margin-bottom:10px;border-collapse:collapse;empty-cells:show}th,td {border:1px solid #009;padding:.25em .5em}th {vertical-align:bottom}td {vertical-align:top}table a {font-weight:bold}.stripe td {background-color: #E6EBF9}.num {text-align:right}.passedodd td {background-color: #3F3}.passedeven td {background-color: #0A0}.skippedodd td {background-color: #DDD}.skippedeven td {background-color: #CCC}.failedodd td,.attn {background-color: #F33}.failedeven td,.stripe .attn {background-color: #D00}.stacktrace {white-space:pre;font-family:monospace}.totop {font-size:85%;text-align:center;border-bottom:2px solid #000}.invisible {display:none}</style>
+</head>
+<body>
+<table>
+<tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
+<tr><th colspan="7">Working Suite</th></tr>
+<tr><td><a href="#t0">Input</a></td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">6</td><td></td><td></td></tr>
+<tr class="stripe"><td><a href="#t1">Categorization</a></td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">53,982</td><td>smoke</td><td></td></tr>
+<tr><th>Total</th><th class="num">0</th><th class="num">0</th><th class="num attn">1</th><th class="num">53,988</th><th colspan="2"></th></tr>
+</table>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Working Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4" class="invisible"/></tr></tbody>
+<tbody id="t1"><tr><th colspan="4">Categorization &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">testScriptsSmoke.TS_005_ValidateCategorization</td><td><a href="#m0">validateCategorization</a></td><td rowspan="1">1619519071401</td><td rowspan="1">8420</td></tr></tbody>
+</table>
+<h2>Input</h2><h2>Categorization</h2><h3 id="m0">testScriptsSmoke.TS_005_ValidateCategorization#validateCategorization</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages">MTM TC IDs :null<br/><a href='C:\Users\srinivas.a\git\Sightline_QA_Automation_POM_Final\sightline\Screenshots\TS_005_ValidateCategorization--validateCategorization2167591.png'> <img src='C:\Users\srinivas.a\git\Sightline_QA_Automation_POM_Final\sightline\Screenshots\TS_005_ValidateCategorization--validateCategorization2167591.png' height='50' width='50'/> </a></div></td></tr><tr><th>Exception</th></tr><tr><td><div class="stacktrace">org.openqa.selenium.WebDriverException: unknown error: Element is not clickable at point (911, 708)
+  (Session info: chrome=86.0.4240.198)
+  (Driver info: chromedriver=2.36.540470 (e522d04694c7ebea4ba8821272dbef4f9b818c91),platform=Windows NT 10.0.18363 x86_64) (WARNING: The server did not provide any stacktrace information)
+Command duration or timeout: 30 milliseconds
 Build info: version: &apos;3.4.0&apos;, revision: &apos;unknown&apos;, time: &apos;unknown&apos;
-System info: host: &apos;INLTP-FERHAT&apos;, ip: &apos;10.12.51.190&apos;, os.name: &apos;Windows 10&apos;, os.arch: &apos;amd64&apos;, os.version: &apos;10.0&apos;, java.version: &apos;1.8.0_241&apos;
+System info: host: &apos;LNT-HZ-NP-SQA18&apos;, ip: &apos;10.224.187.142&apos;, os.name: &apos;Windows 10&apos;, os.arch: &apos;amd64&apos;, os.version: &apos;10.0&apos;, java.version: &apos;1.8.0_271&apos;
 Driver info: org.openqa.selenium.chrome.ChromeDriver
-Capabilities [{applicationCacheEnabled=false, rotatable=false, mobileEmulationEnabled=false, networkConnectionEnabled=false, chrome={chromedriverVersion=2.36.540470 (e522d04694c7ebea4ba8821272dbef4f9b818c91), userDataDir=C:\Users\FTARAN~1\AppData\Local\Temp\scoped_dir22660_12642}, takesHeapSnapshot=true, pageLoadStrategy=normal, databaseEnabled=false, handlesAlerts=true, hasTouchScreen=false, version=88.0.4324.150, platform=XP, browserConnectionEnabled=false, nativeEvents=true, acceptSslCerts=false, acceptInsecureCerts=false, locationContextEnabled=true, webStorageEnabled=true, browserName=chrome, takesScreenshot=true, javascriptEnabled=true, cssSelectorsEnabled=true, setWindowRect=true, unexpectedAlertBehaviour=}]
-Session ID: 5f4f64623a60f34e25d7cdec06300ce7
+Capabilities [{applicationCacheEnabled=false, rotatable=false, mobileEmulationEnabled=false, networkConnectionEnabled=false, chrome={chromedriverVersion=2.36.540470 (e522d04694c7ebea4ba8821272dbef4f9b818c91), userDataDir=C:\Users\LOCAL_~1.A\Temp\scoped_dir1408_1458}, takesHeapSnapshot=true, pageLoadStrategy=normal, databaseEnabled=false, handlesAlerts=true, hasTouchScreen=false, version=86.0.4240.198, platform=XP, browserConnectionEnabled=false, nativeEvents=true, acceptSslCerts=false, acceptInsecureCerts=false, locationContextEnabled=true, webStorageEnabled=true, browserName=chrome, takesScreenshot=true, javascriptEnabled=true, cssSelectorsEnabled=true, setWindowRect=true, unexpectedAlertBehaviour=}]
+Session ID: d6cb4f682d9dd40b6f32472aa9fd22d5
 	at org.openqa.selenium.remote.ErrorHandler.createThrowable(ErrorHandler.java:215)
 	at org.openqa.selenium.remote.ErrorHandler.throwIfResponseFailed(ErrorHandler.java:167)
 	at org.openqa.selenium.remote.RemoteWebDriver.execute(RemoteWebDriver.java:671)
 	at org.openqa.selenium.remote.RemoteWebElement.execute(RemoteWebElement.java:272)
 	at org.openqa.selenium.remote.RemoteWebElement.click(RemoteWebElement.java:82)
-	at automationLibrary.Element.waitAndClick(Element.java:257)
-	at pageFactory.BaseClass.selectproject(BaseClass.java:325)
-	at testScriptsSmoke.TS_004_BasicAndAdvancedSearchOperations.ConceptualSearch(TS_004_BasicAndAdvancedSearchOperations.java:251)
-... Removed 30 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p><h3 id="m1">testScriptsSmoke.TS_004_BasicAndAdvancedSearchOperations#audioSearch</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">junit.framework.AssertionFailedError
-	at junit.framework.Assert.fail(Assert.java:47)
-	at junit.framework.Assert.assertTrue(Assert.java:20)
-	at junit.framework.Assert.assertTrue(Assert.java:27)
-	at testScriptsSmoke.TS_004_BasicAndAdvancedSearchOperations.audioSearch(TS_004_BasicAndAdvancedSearchOperations.java:238)
-... Removed 26 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p><h3 id="m2">testScriptsSmoke.TS_004_BasicAndAdvancedSearchOperations#contentSearchWithOperatorsInAS</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: The following asserts failed:
-	expected [true] but found [false],
-	expected [true] but found [false],
-	expected [true] but found [false]
-	at testScriptsSmoke.TS_004_BasicAndAdvancedSearchOperations.contentSearchWithOperatorsInAS(TS_004_BasicAndAdvancedSearchOperations.java:153)
-... Removed 27 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p><h3 id="m3">testScriptsSmoke.TS_004_BasicAndAdvancedSearchOperations#contentSearchWithOperatorsInBS</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: The following asserts failed:
-	expected [true] but found [false],
-	expected [true] but found [false],
-	expected [true] but found [false]
-	at testScriptsSmoke.TS_004_BasicAndAdvancedSearchOperations.contentSearchWithOperatorsInBS(TS_004_BasicAndAdvancedSearchOperations.java:122)
-... Removed 27 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p><h3 id="m4">testScriptsSmoke.TS_004_BasicAndAdvancedSearchOperations#metaDataSearch</h3><table class="result"></table><p class="totop"><a href="#summary">back to summary</a></p><h3 id="m5">testScriptsSmoke.TS_004_BasicAndAdvancedSearchOperations#searchsavedSearch</h3><table class="result"></table><p class="totop"><a href="#summary">back to summary</a></p></body></html>
+	at automationLibrary.Element.Click(Element.java:225)
+	at pageFactory.SessionSearch.bulkTag(SessionSearch.java:1091)
+	at testScriptsSmoke.TS_005_ValidateCategorization.validateCategorization(TS_005_ValidateCategorization.java:76)
+... Removed 29 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+</body>
+</html>
