Latest ICE merge

--- a/sightline/test-output/old/Smoke Suite/toc.html
+++ b/sightline/test-output/old/Smoke Suite/toc.html
@@ -22,7 +22,7 @@
 </tr></table>
 <table width='100%' class='test-failed'>
 <tr><td>
-<table style='width: 100%'><tr><td valign='top'>AdvancedSearchBulkActions (0/2/0)</td><td valign='top' align='right'>
+<table style='width: 100%'><tr><td valign='top'>AdvancedSearchBulkActions (0/2/2)</td><td valign='top' align='right'>
   <a href='AdvancedSearchBulkActions.html' target='mainFrame'>Results</a>
 </td></tr></table>
 </td></tr><p/>
@@ -30,7 +30,7 @@
 
 <table width='100%' class='test-failed'>
 <tr><td>
-<table style='width: 100%'><tr><td valign='top'>AllManageModules (8/2/0)</td><td valign='top' align='right'>
+<table style='width: 100%'><tr><td valign='top'>AllManageModules (9/1/1)</td><td valign='top' align='right'>
   <a href='AllManageModules.html' target='mainFrame'>Results</a>
 </td></tr></table>
 </td></tr><p/>
@@ -38,15 +38,7 @@
 
 <table width='100%' class='test-failed'>
 <tr><td>
-<table style='width: 100%'><tr><td valign='top'>BasicAndAdvancedSearchOperations (18/3/0)</td><td valign='top' align='right'>
-  <a href='BasicAndAdvancedSearchOperations.html' target='mainFrame'>Results</a>
-</td></tr></table>
-</td></tr><p/>
-</table>
-
-<table width='100%' class='test-failed'>
-<tr><td>
-<table style='width: 100%'><tr><td valign='top'>BatchPrint (0/1/0)</td><td valign='top' align='right'>
+<table style='width: 100%'><tr><td valign='top'>BatchPrint (0/1/1)</td><td valign='top' align='right'>
   <a href='BatchPrint.html' target='mainFrame'>Results</a>
 </td></tr></table>
 </td></tr><p/>
@@ -54,8 +46,24 @@
 
 <table width='100%' class='test-failed'>
 <tr><td>
-<table style='width: 100%'><tr><td valign='top'>BulkActionsFromSessionSearch (2/3/0)</td><td valign='top' align='right'>
+<table style='width: 100%'><tr><td valign='top'>BatchUpload (0/1/1)</td><td valign='top' align='right'>
+  <a href='BatchUpload.html' target='mainFrame'>Results</a>
+</td></tr></table>
+</td></tr><p/>
+</table>
+
+<table width='100%' class='test-failed'>
+<tr><td>
+<table style='width: 100%'><tr><td valign='top'>BulkActionsFromSessionSearch (3/2/2)</td><td valign='top' align='right'>
   <a href='BulkActionsFromSessionSearch.html' target='mainFrame'>Results</a>
+</td></tr></table>
+</td></tr><p/>
+</table>
+
+<table width='100%' class='test-failed'>
+<tr><td>
+<table style='width: 100%'><tr><td valign='top'>Categorization (0/1/1)</td><td valign='top' align='right'>
+  <a href='Categorization.html' target='mainFrame'>Results</a>
 </td></tr></table>
 </td></tr><p/>
 </table>
@@ -70,7 +78,7 @@
 
 <table width='100%' class='test-failed'>
 <tr><td>
-<table style='width: 100%'><tr><td valign='top'>Production (0/1/0)</td><td valign='top' align='right'>
+<table style='width: 100%'><tr><td valign='top'>Production (0/1/1)</td><td valign='top' align='right'>
   <a href='Production.html' target='mainFrame'>Results</a>
 </td></tr></table>
 </td></tr><p/>
@@ -78,7 +86,7 @@
 
 <table width='100%' class='test-failed'>
 <tr><td>
-<table style='width: 100%'><tr><td valign='top'>Reports (1/2/0)</td><td valign='top' align='right'>
+<table style='width: 100%'><tr><td valign='top'>Reports (2/1/1)</td><td valign='top' align='right'>
   <a href='Reports.html' target='mainFrame'>Results</a>
 </td></tr></table>
 </td></tr><p/>
@@ -86,7 +94,7 @@
 
 <table width='100%' class='test-failed'>
 <tr><td>
-<table style='width: 100%'><tr><td valign='top'>TS_017_DocList (1/2/0)</td><td valign='top' align='right'>
+<table style='width: 100%'><tr><td valign='top'>TS_017_DocList (1/2/2)</td><td valign='top' align='right'>
   <a href='TS_017_DocList.html' target='mainFrame'>Results</a>
 </td></tr></table>
 </td></tr><p/>
@@ -94,24 +102,8 @@
 
 <table width='100%' class='test-failed'>
 <tr><td>
-<table style='width: 100%'><tr><td valign='top'>ValidateAssignmentFunctionality (1/1/0)</td><td valign='top' align='right'>
+<table style='width: 100%'><tr><td valign='top'>ValidateAssignmentFunctionality (1/1/1)</td><td valign='top' align='right'>
   <a href='ValidateAssignmentFunctionality.html' target='mainFrame'>Results</a>
-</td></tr></table>
-</td></tr><p/>
-</table>
-
-<table width='100%' class='test-failed'>
-<tr><td>
-<table style='width: 100%'><tr><td valign='top'>Workflow (0/1/0)</td><td valign='top' align='right'>
-  <a href='Workflow.html' target='mainFrame'>Results</a>
-</td></tr></table>
-</td></tr><p/>
-</table>
-
-<table width='100%' class='test-skipped'>
-<tr><td>
-<table style='width: 100%'><tr><td valign='top'>Categorization (0/0/1)</td><td valign='top' align='right'>
-  <a href='Categorization.html' target='mainFrame'>Results</a>
 </td></tr></table>
 </td></tr><p/>
 </table>
@@ -126,14 +118,6 @@
 
 <table width='100%' class='test-skipped'>
 <tr><td>
-<table style='width: 100%'><tr><td valign='top'>DocViewAudio (0/0/5)</td><td valign='top' align='right'>
-  <a href='DocViewAudio.html' target='mainFrame'>Results</a>
-</td></tr></table>
-</td></tr><p/>
-</table>
-
-<table width='100%' class='test-skipped'>
-<tr><td>
 <table style='width: 100%'><tr><td valign='top'>SavedSearchShareSchedule (0/0/4)</td><td valign='top' align='right'>
   <a href='SavedSearchShareSchedule.html' target='mainFrame'>Results</a>
 </td></tr></table>
@@ -142,8 +126,24 @@
 
 <table width='100%' class='test-passed'>
 <tr><td>
-<table style='width: 100%'><tr><td valign='top'>BatchUpload (1/0/0)</td><td valign='top' align='right'>
-  <a href='BatchUpload.html' target='mainFrame'>Results</a>
+<table style='width: 100%'><tr><td valign='top'>BasicAndAdvancedSearchOperations (21/0/0)</td><td valign='top' align='right'>
+  <a href='BasicAndAdvancedSearchOperations.html' target='mainFrame'>Results</a>
+</td></tr></table>
+</td></tr><p/>
+</table>
+
+<table width='100%' class='test-passed'>
+<tr><td>
+<table style='width: 100%'><tr><td valign='top'>DocViewAudio (5/0/0)</td><td valign='top' align='right'>
+  <a href='DocViewAudio.html' target='mainFrame'>Results</a>
+</td></tr></table>
+</td></tr><p/>
+</table>
+
+<table width='100%' class='test-passed'>
+<tr><td>
+<table style='width: 100%'><tr><td valign='top'>Workflow (1/0/0)</td><td valign='top' align='right'>
+  <a href='Workflow.html' target='mainFrame'>Results</a>
 </td></tr></table>
 </td></tr><p/>
 </table>
