--- a/sightline/test-output/old/Default suite/methods.html
+++ b/sightline/test-output/old/Default suite/methods.html
@@ -1,44 +1,32 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9e73df">  <td>21/03/01 19:24:49</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TS_004_BasicAndAdvancedSearchOperations.preCondition()[pri:0, instance:testScriptsSmoke.TS_004_BasicAndAdvancedSearchOperations@27c20538]">&gt;&gt;preCondition</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@923219673</td>   <td></td> </tr>
-<tr bgcolor="9e73df">  <td>21/03/01 19:25:39</td>   <td>50680</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TS_004_BasicAndAdvancedSearchOperations.beforeTestMethod(java.lang.reflect.Method)[pri:0, instance:testScriptsSmoke.TS_004_BasicAndAdvancedSearchOperations@27c20538]">&gt;&gt;beforeTestMethod</td> 
-<td>&nbsp;</td>  <td>main@923219673</td>   <td></td> </tr>
-<tr bgcolor="9e73df">  <td>21/03/01 19:25:39</td>   <td>50681</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TS_004_BasicAndAdvancedSearchOperations.ConceptualSearch()[pri:0, instance:testScriptsSmoke.TS_004_BasicAndAdvancedSearchOperations@27c20538]">ConceptualSearch</td> 
-  <td>main@923219673</td>   <td></td> </tr>
-<tr bgcolor="9e73df">  <td>21/03/01 19:26:00</td>   <td>71304</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TS_004_BasicAndAdvancedSearchOperations.takeScreenShot(org.testng.ITestResult, java.lang.reflect.Method)[pri:0, instance:testScriptsSmoke.TS_004_BasicAndAdvancedSearchOperations@27c20538]">&lt;&lt;takeScreenShot</td> 
-<td>&nbsp;</td>  <td>main@923219673</td>   <td></td> </tr>
-<tr bgcolor="9e73df">  <td>21/03/01 19:26:00</td>   <td>71305</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TS_004_BasicAndAdvancedSearchOperations.beforeTestMethod(java.lang.reflect.Method)[pri:0, instance:testScriptsSmoke.TS_004_BasicAndAdvancedSearchOperations@27c20538]">&gt;&gt;beforeTestMethod</td> 
-<td>&nbsp;</td>  <td>main@923219673</td>   <td></td> </tr>
-<tr bgcolor="9e73df">  <td>21/03/01 19:26:00</td>   <td>71307</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TS_004_BasicAndAdvancedSearchOperations.audioSearch()[pri:0, instance:testScriptsSmoke.TS_004_BasicAndAdvancedSearchOperations@27c20538]">audioSearch</td> 
-  <td>main@923219673</td>   <td></td> </tr>
-<tr bgcolor="9e73df">  <td>21/03/01 19:26:22</td>   <td>93638</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TS_004_BasicAndAdvancedSearchOperations.takeScreenShot(org.testng.ITestResult, java.lang.reflect.Method)[pri:0, instance:testScriptsSmoke.TS_004_BasicAndAdvancedSearchOperations@27c20538]">&lt;&lt;takeScreenShot</td> 
-<td>&nbsp;</td>  <td>main@923219673</td>   <td></td> </tr>
-<tr bgcolor="9e73df">  <td>21/03/01 19:26:23</td>   <td>94061</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TS_004_BasicAndAdvancedSearchOperations.beforeTestMethod(java.lang.reflect.Method)[pri:0, instance:testScriptsSmoke.TS_004_BasicAndAdvancedSearchOperations@27c20538]">&gt;&gt;beforeTestMethod</td> 
-<td>&nbsp;</td>  <td>main@923219673</td>   <td></td> </tr>
-<tr bgcolor="9e73df">  <td>21/03/01 19:26:23</td>   <td>94062</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TS_004_BasicAndAdvancedSearchOperations.contentSearchWithOperatorsInAS()[pri:0, instance:testScriptsSmoke.TS_004_BasicAndAdvancedSearchOperations@27c20538]">contentSearchWithOperatorsInAS</td> 
-  <td>main@923219673</td>   <td></td> </tr>
-<tr bgcolor="9e73df">  <td>21/03/01 19:28:46</td>   <td>237405</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TS_004_BasicAndAdvancedSearchOperations.takeScreenShot(org.testng.ITestResult, java.lang.reflect.Method)[pri:0, instance:testScriptsSmoke.TS_004_BasicAndAdvancedSearchOperations@27c20538]">&lt;&lt;takeScreenShot</td> 
-<td>&nbsp;</td>  <td>main@923219673</td>   <td></td> </tr>
-<tr bgcolor="9e73df">  <td>21/03/01 19:28:46</td>   <td>237773</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TS_004_BasicAndAdvancedSearchOperations.beforeTestMethod(java.lang.reflect.Method)[pri:0, instance:testScriptsSmoke.TS_004_BasicAndAdvancedSearchOperations@27c20538]">&gt;&gt;beforeTestMethod</td> 
-<td>&nbsp;</td>  <td>main@923219673</td>   <td></td> </tr>
-<tr bgcolor="9e73df">  <td>21/03/01 19:28:46</td>   <td>237774</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TS_004_BasicAndAdvancedSearchOperations.contentSearchWithOperatorsInBS()[pri:0, instance:testScriptsSmoke.TS_004_BasicAndAdvancedSearchOperations@27c20538]">contentSearchWithOperatorsInBS</td> 
-  <td>main@923219673</td>   <td></td> </tr>
-<tr bgcolor="9e73df">  <td>21/03/01 19:31:41</td>   <td>412317</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TS_004_BasicAndAdvancedSearchOperations.takeScreenShot(org.testng.ITestResult, java.lang.reflect.Method)[pri:0, instance:testScriptsSmoke.TS_004_BasicAndAdvancedSearchOperations@27c20538]">&lt;&lt;takeScreenShot</td> 
-<td>&nbsp;</td>  <td>main@923219673</td>   <td></td> </tr>
-<tr bgcolor="9e73df">  <td>21/03/01 19:31:41</td>   <td>412645</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TS_004_BasicAndAdvancedSearchOperations.beforeTestMethod(java.lang.reflect.Method)[pri:0, instance:testScriptsSmoke.TS_004_BasicAndAdvancedSearchOperations@27c20538]">&gt;&gt;beforeTestMethod</td> 
-<td>&nbsp;</td>  <td>main@923219673</td>   <td></td> </tr>
-<tr bgcolor="9e73df">  <td>21/03/01 19:31:41</td>   <td>412646</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TS_004_BasicAndAdvancedSearchOperations.metaDataSearch()[pri:0, instance:testScriptsSmoke.TS_004_BasicAndAdvancedSearchOperations@27c20538]">metaDataSearch</td> 
-  <td>main@923219673</td>   <td></td> </tr>
-<tr bgcolor="9e73df">  <td>21/03/01 19:34:57</td>   <td>608506</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TS_004_BasicAndAdvancedSearchOperations.takeScreenShot(org.testng.ITestResult, java.lang.reflect.Method)[pri:0, instance:testScriptsSmoke.TS_004_BasicAndAdvancedSearchOperations@27c20538]">&lt;&lt;takeScreenShot</td> 
-<td>&nbsp;</td>  <td>main@923219673</td>   <td></td> </tr>
-<tr bgcolor="9e73df">  <td>21/03/01 19:34:57</td>   <td>608508</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TS_004_BasicAndAdvancedSearchOperations.beforeTestMethod(java.lang.reflect.Method)[pri:0, instance:testScriptsSmoke.TS_004_BasicAndAdvancedSearchOperations@27c20538]">&gt;&gt;beforeTestMethod</td> 
-<td>&nbsp;</td>  <td>main@923219673</td>   <td></td> </tr>
-<tr bgcolor="9e73df">  <td>21/03/01 19:34:57</td>   <td>608514</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TS_004_BasicAndAdvancedSearchOperations.searchsavedSearch()[pri:0, instance:testScriptsSmoke.TS_004_BasicAndAdvancedSearchOperations@27c20538]">searchsavedSearch</td> 
-  <td>main@923219673</td>   <td></td> </tr>
-<tr bgcolor="9e73df">  <td>21/03/01 19:35:57</td>   <td>668868</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TS_004_BasicAndAdvancedSearchOperations.takeScreenShot(org.testng.ITestResult, java.lang.reflect.Method)[pri:0, instance:testScriptsSmoke.TS_004_BasicAndAdvancedSearchOperations@27c20538]">&lt;&lt;takeScreenShot</td> 
-<td>&nbsp;</td>  <td>main@923219673</td>   <td></td> </tr>
-<tr bgcolor="9e73df">  <td>21/03/01 19:35:57</td>   <td>668873</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TS_004_BasicAndAdvancedSearchOperations.close()[pri:0, instance:testScriptsSmoke.TS_004_BasicAndAdvancedSearchOperations@27c20538]">&lt;&lt;close</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@923219673</td>   <td></td> </tr>
+<tr bgcolor="f0ea88">  <td>21/06/07 14:57:47</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TS_019_ICEWorkFlow.before()[pri:0, instance:testScriptsSmoke.TS_019_ICEWorkFlow@815b41f]">&gt;&gt;before</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1101184763</td>   <td></td> </tr>
+<tr bgcolor="f0ea88">  <td>21/06/07 14:57:54</td>   <td>6371</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TS_019_ICEWorkFlow.beforeTestMethod(java.lang.reflect.Method)[pri:0, instance:testScriptsSmoke.TS_019_ICEWorkFlow@815b41f]">&gt;&gt;beforeTestMethod</td> 
+<td>&nbsp;</td>  <td>main@1101184763</td>   <td></td> </tr>
+<tr bgcolor="f0ea88">  <td>21/06/07 14:57:54</td>   <td>6371</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TS_019_ICEWorkFlow.SystemAdminUserVerifications()[pri:1, instance:testScriptsSmoke.TS_019_ICEWorkFlow@815b41f]">SystemAdminUserVerifications</td> 
+  <td>main@1101184763</td>   <td></td> </tr>
+<tr bgcolor="f0ea88">  <td>21/06/07 14:58:13</td>   <td>25667</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TS_019_ICEWorkFlow.takeScreenShot(org.testng.ITestResult)[pri:0, instance:testScriptsSmoke.TS_019_ICEWorkFlow@815b41f]">&lt;&lt;takeScreenShot</td> 
+<td>&nbsp;</td>  <td>main@1101184763</td>   <td></td> </tr>
+<tr bgcolor="f0ea88">  <td>21/06/07 14:58:13</td>   <td>25853</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TS_019_ICEWorkFlow.beforeTestMethod(java.lang.reflect.Method)[pri:0, instance:testScriptsSmoke.TS_019_ICEWorkFlow@815b41f]">&gt;&gt;beforeTestMethod</td> 
+<td>&nbsp;</td>  <td>main@1101184763</td>   <td></td> </tr>
+<tr bgcolor="f0ea88">  <td>21/06/07 14:58:13</td>   <td>25854</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TS_019_ICEWorkFlow.PMUploadAndInitiate()[pri:2, instance:testScriptsSmoke.TS_019_ICEWorkFlow@815b41f]">PMUploadAndInitiate</td> 
+  <td>main@1101184763</td>   <td></td> </tr>
+<tr bgcolor="f0ea88">  <td>21/06/07 14:58:44</td>   <td>57192</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TS_019_ICEWorkFlow.takeScreenShot(org.testng.ITestResult)[pri:0, instance:testScriptsSmoke.TS_019_ICEWorkFlow@815b41f]">&lt;&lt;takeScreenShot</td> 
+<td>&nbsp;</td>  <td>main@1101184763</td>   <td></td> </tr>
+<tr bgcolor="f0ea88">  <td>21/06/07 14:58:44</td>   <td>57327</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TS_019_ICEWorkFlow.beforeTestMethod(java.lang.reflect.Method)[pri:0, instance:testScriptsSmoke.TS_019_ICEWorkFlow@815b41f]">&gt;&gt;beforeTestMethod</td> 
+<td>&nbsp;</td>  <td>main@1101184763</td>   <td></td> </tr>
+<tr bgcolor="f0ea88">  <td>21/06/07 14:58:44</td>   <td>57327</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TS_019_ICEWorkFlow.RMUploadAndInitiate()[pri:3, instance:testScriptsSmoke.TS_019_ICEWorkFlow@815b41f]">RMUploadAndInitiate</td> 
+  <td>main@1101184763</td>   <td></td> </tr>
+<tr bgcolor="f0ea88">  <td>21/06/07 14:59:29</td>   <td>101520</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TS_019_ICEWorkFlow.takeScreenShot(org.testng.ITestResult)[pri:0, instance:testScriptsSmoke.TS_019_ICEWorkFlow@815b41f]">&lt;&lt;takeScreenShot</td> 
+<td>&nbsp;</td>  <td>main@1101184763</td>   <td></td> </tr>
+<tr bgcolor="f0ea88">  <td>21/06/07 14:59:29</td>   <td>101770</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TS_019_ICEWorkFlow.beforeTestMethod(java.lang.reflect.Method)[pri:0, instance:testScriptsSmoke.TS_019_ICEWorkFlow@815b41f]">&gt;&gt;beforeTestMethod</td> 
+<td>&nbsp;</td>  <td>main@1101184763</td>   <td></td> </tr>
+<tr bgcolor="f0ea88">  <td>21/06/07 14:59:29</td>   <td>101770</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TS_019_ICEWorkFlow.PMUploadAndRefresh()[pri:4, instance:testScriptsSmoke.TS_019_ICEWorkFlow@815b41f]">PMUploadAndRefresh</td> 
+  <td>main@1101184763</td>   <td></td> </tr>
+<tr bgcolor="f0ea88">  <td>21/06/07 15:00:00</td>   <td>133096</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TS_019_ICEWorkFlow.takeScreenShot(org.testng.ITestResult)[pri:0, instance:testScriptsSmoke.TS_019_ICEWorkFlow@815b41f]">&lt;&lt;takeScreenShot</td> 
+<td>&nbsp;</td>  <td>main@1101184763</td>   <td></td> </tr>
+<tr bgcolor="f0ea88">  <td>21/06/07 15:00:00</td>   <td>133282</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TS_019_ICEWorkFlow.close()[pri:0, instance:testScriptsSmoke.TS_019_ICEWorkFlow@815b41f]">&lt;&lt;close</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1101184763</td>   <td></td> </tr>
 </table>
