commit for local repo

--- a/sightline/test-output/old/Default suite/classes.html
+++ b/sightline/test-output/old/Default suite/classes.html
@@ -4,14 +4,59 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>testScriptsSmoke.TS_019_ICEWorkFlow</td>
+<td>testScriptsRegression.TS_001_BasicSearch</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>PMUploadAndInitiate</td>
+<td>autoSuggest</td>
+<td>regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>conceptuallySimilar</td>
+<td>regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>emailInclusive</td>
+<td>regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>existingBulkTag</td>
+<td>regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>bulkUnFolder</td>
+<td>regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>metaDataSearchsBS</td>
+<td>regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>bulkUnTag</td>
+<td>regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>exsitingBulkFolder</td>
+<td>regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>copySearchTextToNewSearch</td>
+<td>regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>starSearch</td>
 <td>regression smoke </td>
 </tr>
 <tr>
@@ -19,7 +64,7 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>before</td>
+<td>preCondition</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeMethod</td>
@@ -38,8 +83,4 @@
 <tr>
 <td align='center' colspan='3'>@AfterClass</td>
 </tr>
-<tr>
-<td>&nbsp;</td>
-<td>close</td>
-<td>&nbsp;</td></tr>
 </table>
