--- a/sightline/test-output/old/Default suite/methods.html
+++ b/sightline/test-output/old/Default suite/methods.html
@@ -1,14 +1,66 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="f0ea88">  <td>21/06/21 16:43:54</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TS_019_ICEWorkFlow.before()[pri:0, instance:testScriptsSmoke.TS_019_ICEWorkFlow@815b41f]">&gt;&gt;before</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1583159071</td>   <td></td> </tr>
-<tr bgcolor="f0ea88">  <td>21/06/21 16:44:00</td>   <td>6360</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TS_019_ICEWorkFlow.beforeTestMethod(java.lang.reflect.Method)[pri:0, instance:testScriptsSmoke.TS_019_ICEWorkFlow@815b41f]">&gt;&gt;beforeTestMethod</td> 
-<td>&nbsp;</td>  <td>main@1583159071</td>   <td></td> </tr>
-<tr bgcolor="f0ea88">  <td>21/06/21 16:44:00</td>   <td>6360</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TS_019_ICEWorkFlow.PMUploadAndInitiate()[pri:2, instance:testScriptsSmoke.TS_019_ICEWorkFlow@815b41f]">PMUploadAndInitiate</td> 
-  <td>main@1583159071</td>   <td></td> </tr>
-<tr bgcolor="f0ea88">  <td>21/06/21 16:45:07</td>   <td>73492</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TS_019_ICEWorkFlow.takeScreenShot(org.testng.ITestResult)[pri:0, instance:testScriptsSmoke.TS_019_ICEWorkFlow@815b41f]">&lt;&lt;takeScreenShot</td> 
-<td>&nbsp;</td>  <td>main@1583159071</td>   <td></td> </tr>
-<tr bgcolor="f0ea88">  <td>21/06/21 16:45:08</td>   <td>73852</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TS_019_ICEWorkFlow.close()[pri:0, instance:testScriptsSmoke.TS_019_ICEWorkFlow@815b41f]">&lt;&lt;close</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1583159071</td>   <td></td> </tr>
+<tr bgcolor="b4697c">  <td>21/08/16 11:13:58</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TS_001_BasicSearch.preCondition()[pri:0, instance:testScriptsRegression.TS_001_BasicSearch@528c868]">&gt;&gt;preCondition</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1076071888</td>   <td></td> </tr>
+<tr bgcolor="b4697c">  <td>21/08/16 11:14:05</td>   <td>6475</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TS_001_BasicSearch.beforeTestMethod(java.lang.reflect.Method)[pri:0, instance:testScriptsRegression.TS_001_BasicSearch@528c868]">&gt;&gt;beforeTestMethod</td> 
+<td>&nbsp;</td>  <td>main@1076071888</td>   <td></td> </tr>
+<tr bgcolor="b4697c">  <td>21/08/16 11:14:05</td>   <td>6476</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TS_001_BasicSearch.copySearchTextToNewSearch()[pri:1, instance:testScriptsRegression.TS_001_BasicSearch@528c868]">copySearchTextToNewSearch</td> 
+  <td>main@1076071888</td>   <td></td> </tr>
+<tr bgcolor="b4697c">  <td>21/08/16 11:16:14</td>   <td>135861</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TS_001_BasicSearch.takeScreenShot(org.testng.ITestResult)[pri:0, instance:testScriptsRegression.TS_001_BasicSearch@528c868]">&lt;&lt;takeScreenShot</td> 
+<td>&nbsp;</td>  <td>main@1076071888</td>   <td></td> </tr>
+<tr bgcolor="b4697c">  <td>21/08/16 11:17:00</td>   <td>182051</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TS_001_BasicSearch.beforeTestMethod(java.lang.reflect.Method)[pri:0, instance:testScriptsRegression.TS_001_BasicSearch@528c868]">&gt;&gt;beforeTestMethod</td> 
+<td>&nbsp;</td>  <td>main@1076071888</td>   <td></td> </tr>
+<tr bgcolor="b4697c">  <td>21/08/16 11:17:00</td>   <td>182052</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TS_001_BasicSearch.autoSuggest()[pri:2, instance:testScriptsRegression.TS_001_BasicSearch@528c868]">autoSuggest</td> 
+  <td>main@1076071888</td>   <td></td> </tr>
+<tr bgcolor="b4697c">  <td>21/08/16 11:18:47</td>   <td>288614</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TS_001_BasicSearch.takeScreenShot(org.testng.ITestResult)[pri:0, instance:testScriptsRegression.TS_001_BasicSearch@528c868]">&lt;&lt;takeScreenShot</td> 
+<td>&nbsp;</td>  <td>main@1076071888</td>   <td></td> </tr>
+<tr bgcolor="b4697c">  <td>21/08/16 11:18:59</td>   <td>300903</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TS_001_BasicSearch.beforeTestMethod(java.lang.reflect.Method)[pri:0, instance:testScriptsRegression.TS_001_BasicSearch@528c868]">&gt;&gt;beforeTestMethod</td> 
+<td>&nbsp;</td>  <td>main@1076071888</td>   <td></td> </tr>
+<tr bgcolor="b4697c">  <td>21/08/16 11:18:59</td>   <td>300903</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TS_001_BasicSearch.emailInclusive()[pri:3, instance:testScriptsRegression.TS_001_BasicSearch@528c868]">emailInclusive</td> 
+  <td>main@1076071888</td>   <td></td> </tr>
+<tr bgcolor="b4697c">  <td>21/08/16 11:20:34</td>   <td>395754</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TS_001_BasicSearch.takeScreenShot(org.testng.ITestResult)[pri:0, instance:testScriptsRegression.TS_001_BasicSearch@528c868]">&lt;&lt;takeScreenShot</td> 
+<td>&nbsp;</td>  <td>main@1076071888</td>   <td></td> </tr>
+<tr bgcolor="b4697c">  <td>21/08/16 11:20:34</td>   <td>395755</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TS_001_BasicSearch.beforeTestMethod(java.lang.reflect.Method)[pri:0, instance:testScriptsRegression.TS_001_BasicSearch@528c868]">&gt;&gt;beforeTestMethod</td> 
+<td>&nbsp;</td>  <td>main@1076071888</td>   <td></td> </tr>
+<tr bgcolor="b4697c">  <td>21/08/16 11:20:34</td>   <td>395755</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TS_001_BasicSearch.conceptuallySimilar()[pri:4, instance:testScriptsRegression.TS_001_BasicSearch@528c868]">conceptuallySimilar</td> 
+  <td>main@1076071888</td>   <td></td> </tr>
+<tr bgcolor="b4697c">  <td>21/08/16 11:21:45</td>   <td>466101</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TS_001_BasicSearch.takeScreenShot(org.testng.ITestResult)[pri:0, instance:testScriptsRegression.TS_001_BasicSearch@528c868]">&lt;&lt;takeScreenShot</td> 
+<td>&nbsp;</td>  <td>main@1076071888</td>   <td></td> </tr>
+<tr bgcolor="b4697c">  <td>21/08/16 11:21:45</td>   <td>466102</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TS_001_BasicSearch.beforeTestMethod(java.lang.reflect.Method)[pri:0, instance:testScriptsRegression.TS_001_BasicSearch@528c868]">&gt;&gt;beforeTestMethod</td> 
+<td>&nbsp;</td>  <td>main@1076071888</td>   <td></td> </tr>
+<tr bgcolor="b4697c">  <td>21/08/16 11:21:45</td>   <td>466102</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TS_001_BasicSearch.exsitingBulkFolder()[pri:5, instance:testScriptsRegression.TS_001_BasicSearch@528c868]">exsitingBulkFolder</td> 
+  <td>main@1076071888</td>   <td></td> </tr>
+<tr bgcolor="b4697c">  <td>21/08/16 11:22:52</td>   <td>533673</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TS_001_BasicSearch.takeScreenShot(org.testng.ITestResult)[pri:0, instance:testScriptsRegression.TS_001_BasicSearch@528c868]">&lt;&lt;takeScreenShot</td> 
+<td>&nbsp;</td>  <td>main@1076071888</td>   <td></td> </tr>
+<tr bgcolor="b4697c">  <td>21/08/16 11:23:04</td>   <td>545779</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TS_001_BasicSearch.beforeTestMethod(java.lang.reflect.Method)[pri:0, instance:testScriptsRegression.TS_001_BasicSearch@528c868]">&gt;&gt;beforeTestMethod</td> 
+<td>&nbsp;</td>  <td>main@1076071888</td>   <td></td> </tr>
+<tr bgcolor="b4697c">  <td>21/08/16 11:23:04</td>   <td>545779</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TS_001_BasicSearch.existingBulkTag()[pri:6, instance:testScriptsRegression.TS_001_BasicSearch@528c868]">existingBulkTag</td> 
+  <td>main@1076071888</td>   <td></td> </tr>
+<tr bgcolor="b4697c">  <td>21/08/16 11:27:09</td>   <td>790555</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TS_001_BasicSearch.takeScreenShot(org.testng.ITestResult)[pri:0, instance:testScriptsRegression.TS_001_BasicSearch@528c868]">&lt;&lt;takeScreenShot</td> 
+<td>&nbsp;</td>  <td>main@1076071888</td>   <td></td> </tr>
+<tr bgcolor="b4697c">  <td>21/08/16 11:27:09</td>   <td>790556</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TS_001_BasicSearch.beforeTestMethod(java.lang.reflect.Method)[pri:0, instance:testScriptsRegression.TS_001_BasicSearch@528c868]">&gt;&gt;beforeTestMethod</td> 
+<td>&nbsp;</td>  <td>main@1076071888</td>   <td></td> </tr>
+<tr bgcolor="b4697c">  <td>21/08/16 11:27:09</td>   <td>790556</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TS_001_BasicSearch.starSearch()[pri:7, instance:testScriptsRegression.TS_001_BasicSearch@528c868]">starSearch</td> 
+  <td>main@1076071888</td>   <td></td> </tr>
+<tr bgcolor="b4697c">  <td>21/08/16 11:28:13</td>   <td>854667</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TS_001_BasicSearch.takeScreenShot(org.testng.ITestResult)[pri:0, instance:testScriptsRegression.TS_001_BasicSearch@528c868]">&lt;&lt;takeScreenShot</td> 
+<td>&nbsp;</td>  <td>main@1076071888</td>   <td></td> </tr>
+<tr bgcolor="b4697c">  <td>21/08/16 11:28:13</td>   <td>854668</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TS_001_BasicSearch.beforeTestMethod(java.lang.reflect.Method)[pri:0, instance:testScriptsRegression.TS_001_BasicSearch@528c868]">&gt;&gt;beforeTestMethod</td> 
+<td>&nbsp;</td>  <td>main@1076071888</td>   <td></td> </tr>
+<tr bgcolor="b4697c">  <td>21/08/16 11:28:13</td>   <td>854668</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TS_001_BasicSearch.bulkUnTag()[pri:8, instance:testScriptsRegression.TS_001_BasicSearch@528c868]">bulkUnTag</td> 
+  <td>main@1076071888</td>   <td></td> </tr>
+<tr bgcolor="b4697c">  <td>21/08/16 11:28:23</td>   <td>864844</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TS_001_BasicSearch.takeScreenShot(org.testng.ITestResult)[pri:0, instance:testScriptsRegression.TS_001_BasicSearch@528c868]">&lt;&lt;takeScreenShot</td> 
+<td>&nbsp;</td>  <td>main@1076071888</td>   <td></td> </tr>
+<tr bgcolor="b4697c">  <td>21/08/16 11:28:36</td>   <td>877358</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TS_001_BasicSearch.beforeTestMethod(java.lang.reflect.Method)[pri:0, instance:testScriptsRegression.TS_001_BasicSearch@528c868]">&gt;&gt;beforeTestMethod</td> 
+<td>&nbsp;</td>  <td>main@1076071888</td>   <td></td> </tr>
+<tr bgcolor="b4697c">  <td>21/08/16 11:28:36</td>   <td>877358</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TS_001_BasicSearch.bulkUnFolder()[pri:9, instance:testScriptsRegression.TS_001_BasicSearch@528c868]">bulkUnFolder</td> 
+  <td>main@1076071888</td>   <td></td> </tr>
+<tr bgcolor="b4697c">  <td>21/08/16 11:31:05</td>   <td>1026668</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TS_001_BasicSearch.takeScreenShot(org.testng.ITestResult)[pri:0, instance:testScriptsRegression.TS_001_BasicSearch@528c868]">&lt;&lt;takeScreenShot</td> 
+<td>&nbsp;</td>  <td>main@1076071888</td>   <td></td> </tr>
+<tr bgcolor="b4697c">  <td>21/08/16 11:31:51</td>   <td>1072778</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TS_001_BasicSearch.beforeTestMethod(java.lang.reflect.Method)[pri:0, instance:testScriptsRegression.TS_001_BasicSearch@528c868]">&gt;&gt;beforeTestMethod</td> 
+<td>&nbsp;</td>  <td>main@1076071888</td>   <td></td> </tr>
+<tr bgcolor="b4697c">  <td>21/08/16 11:31:51</td>   <td>1072778</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TS_001_BasicSearch.metaDataSearchsBS()[pri:10, instance:testScriptsRegression.TS_001_BasicSearch@528c868]">metaDataSearchsBS</td> 
+  <td>main@1076071888</td>   <td></td> </tr>
+<tr bgcolor="b4697c">  <td>21/08/16 11:40:35</td>   <td>1596727</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TS_001_BasicSearch.takeScreenShot(org.testng.ITestResult)[pri:0, instance:testScriptsRegression.TS_001_BasicSearch@528c868]">&lt;&lt;takeScreenShot</td> 
+<td>&nbsp;</td>  <td>main@1076071888</td>   <td></td> </tr>
 </table>
